--- a/QingShan.Web/Dockerfile
+++ b/QingShan.Web/Dockerfile
@@ -6,11 +6,11 @@ EXPOSE 9999
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["/QingShan.Web/QingShan.Web.csproj", "QingShan.Web/"]
-COPY ["/QingShan.ServiceLayer/QingShan.Services.csproj", "QingShan.ServiceLayer/"]
-COPY ["/QingShan.DataLayer/QingShan.DataLayer.csproj", "QingShan.DataLayer/"]
-COPY ["/QingShan.Core/QingShan.Core.csproj", "QingShan.Core/"]
-COPY ["/QingShan/QingShan.csproj", "QingShan/"]
+COPY ["../QingShan.Web/QingShan.Web.csproj", "QingShan.Web/"]
+COPY ["../QingShan.ServiceLayer/QingShan.Services.csproj", "QingShan.ServiceLayer/"]
+COPY ["../QingShan.DataLayer/QingShan.DataLayer.csproj", "QingShan.DataLayer/"]
+COPY ["../QingShan.Core/QingShan.Core.csproj", "QingShan.Core/"]
+COPY ["../QingShan/QingShan.csproj", "QingShan/"]
 RUN dotnet restore "QingShan.Web/QingShan.Web.csproj"
 COPY . .
 WORKDIR "/src/QingShan.Web"
