--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,7 @@ stages:
   jobs:  
   - job: Build
     displayName: Build
-    pool:
-        vmImage: 'ubuntu-1604'
+    pool: QSPool
     steps:
     - task: Docker@2
       inputs:
