--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,20 +16,9 @@ stages:
     displayName: Build
     pool: QSPool
     steps:
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'qs_regisitry'
-        command: 'login'
-
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'qs_regisitry'
-        repository: '$(Build.Repository.Name)'
-        command: 'build'
-        Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: $(Build.BuildId)
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'qs_regisitry'
-        repository: '$(Build.Repository.Name)'
-        command: 'push'
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'qs_regisitry'
+          repository: 'qs.web.api'
+          command: 'buildAndPush'
+          Dockerfile: '**/Dockerfile'
