--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
     steps:
     - task: Docker@2
       inputs:
+        containerRegistry: 'qs_regisitry'
         repository: 'qs.web'
         command: 'build'
         Dockerfile: '**/Dockerfile'
-        buildContext: '$(Build.Repository.LocalPath)'
