--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,8 @@ trigger:
 
 variables:
   tag: '$(Build.BuildId)'
+  imageName: 'activityreservation'
+
 
 stages:
 - stage: Build
@@ -16,9 +18,7 @@ stages:
     displayName: Build
     pool: QSPool
     steps:
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'qs_regisitry'
-        repository: 'qs.web'
-        command: 'build'
-        Dockerfile: '**/Dockerfile'
+    - script: |
+        docker build -f Dockerfile -t $(imageName) .
+        docker login -u $(dockerId) -p $(pswd)
+        docker push $(imageName)
