--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,20 @@ variables:
   imageName: 'qs.web.api'
 
 steps:
-- task: Docker@2
-  inputs:
-    containerRegistry: 'qs_regisitry'
-    repository: 'qs.web.api'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
-    
+
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'qs_regisitry'
+          command: 'login'
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'qs_regisitry'
+          repository: '$(imageName)'
+          command: 'build'
+          Dockerfile: '**/Dockerfile'
+      - task: Docker@2
+        inputs:
+          containerRegistry: 'qs_regisitry'
+          repository: '$(Build.Repository.Name)'
+          command: 'push'
     
