--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,12 +18,7 @@ steps:
       - task: Docker@2
         inputs:
           containerRegistry: 'qs_regisitry'
-          repository: '$(imageName)'
-          command: 'build'
+          repository: 'qs.web.api'
+          command: 'buildAndPush'
           Dockerfile: '**/Dockerfile'
-      - task: Docker@2
-        inputs:
-          containerRegistry: 'qs_regisitry'
-          repository: '$(Build.Repository.Name)'
-          command: 'push'
     
