--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,6 +21,10 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'QSDockerRegistry'
+        command: 'login'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'QSDockerRegistry'
         repository: 'qs.web.api'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
